3rdYear/2ndSemester/Compiladores/P/aula2/bloco2/b2_02/SuffixCalculator.g4
grammar SuffixCalculator;

program: stat*EOF
;

stat: expr? NEWLINE
;

expr: expr expr op = ('*'|'/'|'+'|'-') #ExprSuffix
      | Number                         #ExprNumber
;       

Number:[0-9]+('.'[0-9]+)?;
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
